fixed text and picture not aligning and changed font size

--- a/css/master.css
+++ b/css/master.css
@@ -121,7 +121,7 @@ main article h2 {
 
 main article p {
   font-family: var(--main-font-family);
-  font-size: 1.5rem;
+  font-size: 1.2rem;
 }
 
  #kina {
